fixed gap below content box on the right hand side

--- a/ads/main.scss
+++ b/ads/main.scss
@@ -27,6 +27,7 @@
 
 .alphaville-ad-dmpu-desktop {
 	display: none;
+	margin-bottom: 15px;
 
 	@include oGridRespondTo(L) {
 		display: block;
